# opencvtest

./: CMakeLists.txt
BaseProject/: CMakeLists.txt  base_project.cpp
src/code/: main.cpp
